<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context="tanzeer.parkmycar.AdminPanel">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/pink">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_parking_lots"
            android:textSize="@dimen/_22ssp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/txt_name"
            android:layout_below="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_15sdp"
            android:hint="@string/parking_name"
            android:inputType="text"/>
        <EditText
            android:id="@+id/txt_capacity"
            android:layout_below="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_15sdp"
            android:hint="@string/parking_capacity"
            android:inputType="number"/>
        <EditText
            android:id="@+id/txt_lat"
            android:layout_below="@+id/txt_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_15sdp"
            android:hint="@string/parking_latitude_value"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/txt_lon"
            android:layout_below="@+id/txt_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:hint="@string/parking_longitude_value"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_lon"
            android:background="@drawable/buttonstylepink"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/add"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_currentBookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_add"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonstylepurple"
            android:text="@string/see_all_bookings"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_15sdp"/>
        <Button
            android:id="@+id/btn_currentParkingStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_currentBookings"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonstyleblue"
            android:text="@string/see_parking_status"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_15sdp"/>
    </RelativeLayout>


</LinearLayout>
