<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context="tanzeer.parkmycar.HowTo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/txt_steps_of_booking"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_21ssp"
        android:textStyle="bold"
        android:paddingTop="@dimen/_30sdp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_7sdp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/txt_step1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_17ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_17ssp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_17ssp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_17ssp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step5"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_17ssp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step6"
            android:textSize="@dimen/_17ssp"
            android:textColor="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:drawablePadding="@dimen/_5sdp"/>
    </LinearLayout>

</LinearLayout>
