<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tanzeer.parkmycar.Login"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_24ssp"
            android:textColor="@color/white"
            android:text="@string/txt_welcome"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_app_description"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_15sdp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_learnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/buttonstylegreen"
                android:text="@string/txt_btn_learn_more"
                android:textColor="@color/colorPrimaryDark" />
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/buttonstylegreen"
                android:layout_margin="@dimen/_10sdp"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingRight="@dimen/_30sdp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/primary_light">
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="@dimen/_10sdp"/>
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/buttonstylepink"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:drawableEnd="@drawable/ic_send_black_24dp" />
    </LinearLayout>
</LinearLayout>
