<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tanzeer.parkmycar.SignUp"
    android:background="@color/primary_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/txt_sign_up"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_35ssp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/primary_light">
        <EditText
            android:id="@+id/txt_usernameDuringRegistration"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="text"/>
        <EditText
            android:id="@+id/txt_emailDuringRegistration"
            android:layout_below="@id/txt_usernameDuringRegistration"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/txt_passwordDuringRegistration"
            android:layout_below="@id/txt_emailDuringRegistration"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/txt_phoneDuringRegistration"
            android:layout_below="@id/txt_passwordDuringRegistration"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_phone"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:inputType="number"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/txt_registrationNoDuringRegistration"
            android:layout_below="@id/txt_phoneDuringRegistration"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_vehicle_registration_number"
            android:drawableLeft="@drawable/ic_directions_car_pink_24dp"
            android:drawableStart="@drawable/ic_directions_car_pink_24dp"
            android:drawablePadding="@dimen/_10sdp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_registrationNoDuringRegistration"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:prompt="@string/spinner_title" />

        <Button
            android:id="@+id/btn_signupFromSignUpPage"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/buttonstylepink"
            android:drawableEnd="@drawable/ic_send_black_24dp"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:text="@string/txt_sign_up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtBtn_alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signupFromSignUpPage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_28sdp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/txt_already_have_an_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
